--- a/style/style1.css
+++ b/style/style1.css
@@ -2,6 +2,15 @@
   position: relative;
 }
 
+#AboutUs {
+
+
+}
+
+#VisitorForm {
+
+}
+
 #CalgCoordMarker {
   position: absolute;
   top: 27px;
@@ -9,6 +18,32 @@
   font-size: 18px;
 }
 
-.ImgBanner {
+.ImageGallery {
+
+}
+
+.GalleryImage {
   width: 30%;
+}
+
+div.MemberProfile {
+  margin: 5px;
+  border: 1px solid #ccc;
+  float: left;
+  width: 180px;
+}
+
+div.MemberProfile:hover {
+  border: 1px solid #777;
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+}
+
+div.MemberProfile img {
+  width: 100%;
+  height: auto;
+}
+
+div.MemberBio {
+  padding: 15px;
+  text-align: center;
 }
